# salaires.dev

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  deno.json  elm.json  package.json
back/: .env.example  Cargo.toml  Dockerfile
back/src/: main.rs
back/src/api/: compute_challenge.rs  confirm_token.rs  fetch_companies.rs  fetch_locations.rs  fetch_salaries.rs  fetch_titles.rs  insert_salary.rs  mod.rs  send_token.rs
back/src/app/: mod.rs
back/src/app/api/: confirm_token.rs  fetch_salaries.rs  insert_salary.rs  mod.rs
back/src/app/assets/: hero.rs
back/src/app/www/: i18n.rs  mod.rs
back/src/app/www/components/: button.rs  dropdown.rs  form.rs  hcaptcha.rs  input.rs  link.rs  mod.rs  notification.rs  palette.rs  select.rs  submit.rs  table.rs
back/src/app/www/controllers/: index.rs  insert.rs  maintenance.rs  mod.rs  not_found.rs  notification.rs  sort.rs  validate.rs
back/src/app/www/fragments/: company_field.rs  company_xp_field.rs  compensation_field.rs  email_field.rs  field.rs  form.rs  level_field.rs  location_field.rs  mod.rs  salary_table.rs  title_field.rs  total_xp_field.rs
back/src/app/www/models/: form.rs  mod.rs
back/src/app/www/pages/: index.rs  insert.rs  mod.rs  salaries.rs  sort.rs  template.rs  validate.rs
back/src/app/www/templates/: _500.rs  mod.rs  page.rs
back/src/domain/: mod.rs
back/src/domain/models/: captcha.rs  company.rs  company_type.rs  compensation.rs  date.rs  email.rs  level.rs  location.rs  mod.rs  order.rs  salary.rs  status.rs  stock.rs  title.rs  token.rs  xp.rs
back/src/domain/use_cases/: compute_challenge.rs  confirm_token.rs  fetch_companies.rs  fetch_locations.rs  fetch_salaries.rs  fetch_titles.rs  insert_salary.rs  mod.rs  send_token.rs
back/src/infra/: mod.rs
back/src/infra/captcha_repository/: in_memory.rs  mod.rs  supabase.rs
back/src/infra/captcha_service/: hcaptcha.rs  mod.rs  stub.rs
back/src/infra/company_repository/: in_memory.rs  supabase.rs
back/src/infra/location_repository/: in_memory.rs  supabase.rs
back/src/infra/salary_repository/: in_memory.rs  mod.rs  supabase.rs
back/src/infra/title_repository/: supabase.rs
back/src/infra/token_repository/: in_memory.rs  mod.rs  supabase.rs
back/src/infra/token_sender/: email.rs  stub.rs
back/src/repositories/: mod.rs
back/src/repositories/location/: mod.rs
back/src/repositories/salary/: in_memory.rs  mod.rs  supabase.rs
front/: .env.example  .gitignore  elm.json  package-lock.json  package.json
front/src/: Flags.elm  I18n.elm  Main.elm  Notification.elm  Page.elm  Ports.elm  Route.elm  index.html  index.js
src/: Flags.elm  I18n.elm  Main.elm  Page.elm  Route.elm  Utils.elm  index.html  index.js  main.rs  main.ts
src/Design/: Button.elm  Input.elm  Select.elm  Table.elm  Utils.elm
src/Models/: Company.elm  CompanyName.elm  CompanyXp.elm  Compensation.elm  Date.elm  Level.elm  Location.elm  LocationName.elm  Salary.elm  SalaryId.elm  Stock.elm  TotalXp.elm  Xp.elm
src/Pages/: Index.elm  (+3 more)
(+256 files in other folders)
